<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="nusantarawings_title">Nusantara Wings</string>
    <string name="nusantarawings_summary">Get your favorite customization</string>
    <string name="nad_style_title">Nusantara wings background</string>
    <string name="nad_color_ios">IOS</string>
    <string name="nad_color_transparent">Transparent</string>
    <string name="nad_color_random">Random</string>
    <string name="nad_color_accent">Accent</string>
    <string name="nusantara_cat_style_title">Nusantara category style</string>
    <string name="nad_cat_navbar">With navbar</string>
    <string name="nad_cat_withoutnavbar">Without navbar</string>
    <string name="nad_cat_tabbed">Tabbed (With navbar)</string>
    <string name="dialog_team_title">The team</string>
    <string name="developer_title">Developer</string>
    <string name="maintainer_title">Maintainer</string>
    <string name="contributor_title">Contributor</string>
    <string name="designer_title">Designer</string>
    <string name="bottom_nav_system_title">System</string>
    <string name="bottom_nav_lockscreen_title">Lockscreen</string>
    <string name="bottom_nav_statusbar_title">Statusbar</string>
    <string name="bottom_nav_hardware_title">Hardware</string>
    <string name="bottom_nav_multitasking_title">Multitasking</string>
    <string name="nad_parts_title">Nusantara Parts</string>
    <string name="nad_parts_summary">Device specific customization</string>
    <string name="themes_title">Themes</string>
    <string name="themes_summary">Customize the themes</string>
    <string name="miscellaneous_title">Miscellaneous</string>
    <string name="miscellaneous_summary">Customize the miscellaneous</string>
    <string name="powermenu_title">Power menu</string>
    <string name="powermenu_summary">Customize the power menu</string>
    <string name="notifications_title">Notifications</string>
    <string name="notifications_summary">Customize the notifications</string>
    <string name="fingerprint_prefs_title">Fingerprint prefs</string>
    <string name="fingerprint_prefs_summary">Customize the fingerprint scanner</string>
    <string name="lockscreen_items_title">Lockscreen items</string>
    <string name="lockscreen_items_summary">Customize the lockscreen item</string>
    <string name="lockscreen_style_title">Lockscreen Style</string>
    <string name="lockscreen_style_summary">Customize the lockscreen</string>
    <string name="battery_options_title">Battery options</string>
    <string name="battery_options_summary">Customize the statusbar battery</string>
    <string name="carrier_label_title">Carrier label</string>
    <string name="carrier_label_summary">Customize the carrier label</string>
    <string name="clock_options_title">Clock options</string>
    <string name="clock_options_summary">Customize the statusbar clock</string>
    <string name="icon_manager_title">Icon manager</string>
    <string name="icon_manager_summary">Customize the statusbar items</string>
    <string name="quicksettings_title">Quick settings</string>
    <string name="quicksettings_summary">Customize the quick settings</string>
    <string name="traffic_title">Traffic indicators</string>
    <string name="traffic_summary">Customize the traffic indicators</string>
    <string name="buttons_title">Buttons</string>
    <string name="buttons_summary">Customize the button options</string>
    <string name="navigation_options_title">Navigation</string>
    <string name="navigation_options_summary">Customize the navigation options</string>
    <string name="home_key_title">Home button</string>
    <string name="back_key_title">Back button</string>
    <string name="menu_key_title">Menu button</string>
    <string name="assist_key_title">Assist button</string>
    <string name="app_switch_key_title">Recents button</string>
    <string name="camera_key_title">Camera button</string>
    <string name="short_press_title">Short press action</string>
    <string name="long_press_title">Long press action</string>
    <string name="double_tap_title">Double tap action</string>
    <string name="app_picker_dialog_title">Select an app</string>
    <string name="long_press_custom_app_title">Long press custom app</string>
    <string name="double_tap_custom_app_title">Double tap custom app</string>
    <string name="button_backlight_title">Button backlight</string>
    <string name="button_backlight_summary">Configure backlight for capacitive keys</string>
    <string name="button_backlight_on_touch_only_title">Button touch</string>
    <string name="button_backlight_on_touch_only_summary">Enable backlight with timeout only on button touch</string>
    <string name="button_timeout_title">Backlight timeout (seconds)</string>
    <string name="button_link_brightness">Link to screen brightness</string>
    <string name="button_link_brightness_summary">Use screen brightness level</string>
    <string name="button_manual_brightness">Brightness level</string>
    <string name="button_backlight_enable_title">Allow backlight</string>
    <string name="action_nothing">No action</string>
    <string name="action_menu">Menu</string>
    <string name="action_app_switch">Recents</string>
    <string name="action_search">Assistant</string>
    <string name="action_voice_search">Voice search</string>
    <string name="action_launch_camera">Camera</string>
    <string name="action_last_app">Last app</string>
    <string name="action_splitscreen">Split screen</string>
    <string name="action_flashlight">Flashlight</string>
    <string name="action_clear_notifications">Clear notifications</string>
    <string name="action_volume_panel">Volume panel</string>
    <string name="action_screen_off">Screen off</string>
    <string name="action_notifications">Notifications</string>
    <string name="action_power_menu">Power menu</string>
    <string name="action_screenshot">Screenshot</string>
    <string name="action_qs_panel">QS panel</string>
    <string name="action_app_action">Application</string>
    <string name="action_ringer_modes">Ringer modes</string>
    <string name="kill_app">Kill foreground app</string>
    <string name="skip_song">Skip song</string>
    <string name="prev_song">Previous song</string>
    <string name="partial_screenshot">Partial screenshot</string>
    <string name="ok">OK</string>
    <string name="reset">Reset</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="qs_layout_title">Layout</string>
    <string name="qs_rows_portrait_title">Rows (portrait)</string>
    <string name="qs_rows_landscape_title">Rows (landscape)</string>
    <string name="statusbar_items_title">Tuner statusbar icons</string>
    <string name="statusbar_items_summary">Toggle the visibility of icons in statusbar</string>
    <string name="battery_percent_title">Status bar battery percentage</string>
    <string name="status_bar_battery_style_title">Battery style</string>
    <string name="qs_battery_percentage_title">QS battery percentage</string>
    <string name="qs_battery_percentage_summary">Show battery percentage in the QS header instead of battery estimate</string>
    <string name="battery_show_location_title">Battery location</string>
    <string name="battery_show_location_summary">Toggle battery location for QS header</string>
    <string name="battery_show_percent_estimate_title">Battery percent &amp; estimate</string>
    <string name="battery_show_percent_estimate_summary">Enable battery percent &amp; estimate together</string>
    <string name="volume_panel_on_left_title">Volume Panel on Left</string>
    <string name="volume_panel_on_left_summary">Change volume panel from right side to left side</string>
    <string name="volume_rocker_wake_title">Volume rocker wake</string>
    <string name="volume_rocker_wake_summary">Pressing the volume keys will wake your device</string>
    <string name="fprint_sucess_vib_title">FP authentication vibration</string>
    <string name="fprint_sucess_vib_summary">Vibrate when fingerprint authentication is successful</string>
    <string name="fprint_error_vib_title">FP error vibration</string>
    <string name="fprint_error_vib_summary">Vibrate when fingerprint authentication fails</string>
    <string name="signal_icon_title">Signal Icon</string>
    <string name="show_fourg_icon_title">4G icon</string>
    <string name="show_fourg_icon_summary">Display 4G icon in signal icon instead LTE</string>
    <string name="volte_icon_title">VoLTE icon</string>
    <string name="volte_icon_summary">Display VoLTE icon</string>
    <string name="volte_icon_style_title">Select VoLTE Icon</string>
    <string name="nusantara_logo_title">Nusantara logo</string>
    <string name="nusantara_logo_summary">Enable nusantara logo</string>
    <string name="status_bar_logo_style_title">Custom logo</string>
    <string name="notification_headers_title">Notification Headers</string>
    <string name="notification_headers_summary">Hide headers in the notification shade</string>
    <string name="center_notification_headers_title">Center Notification Headers</string>
    <string name="center_notification_headers_summary">Enable center text headers in the notification shade</string>
    <string name="heads_up_notifications">Heads Up Options</string>
    <string name="heads_up_notifications_summary">Pop up statusbar notifications</string>
    <string name="less_boring_heads_up_title">Dialer heads up</string>
    <string name="less_boring_heads_up_summary">Show heads up only for dialer app and disable all others</string>
    <string name="volume_panel">Volume Panel Style</string>
    <string name="volume_panel_aospa_val">com.android.systemui.volume</string>
    <string name="double_tap_power_flashlight_title">Screen off power button torch</string>
    <string name="volume_dialog_timeout_title">Volume dialog timeout</string>
    <string name="battery_bar_title">Battery bar</string>
    <string name="battery_bar_summary">Display and customize battery bar near status bar or navigation bar</string>
    <string name="pulse_ambient_light_title">Edge lighting</string>
    <string name="pulse_ambient_light_summary">Light up the side edges of the screen on notification pulse</string>
    <string name="use_old_mobiletype_title">Small mobile type icon</string>
    <string name="use_old_mobiletype_summary">Show mobile type icon on top of the signal indicator</string>
    <string name="fp_unlock_keystore_title">Force FP authentication</string>
    <string name="fp_unlock_keystore_summary">Unlock device with fingerprint after reboot or lockdown</string>
    <string name="fod_recognizing_animation_title">Recognizing animation</string>
    <string name="fod_recognizing_animation_summary">Show an animation while reading your fingerprint</string>
    <string name="fod_icon_picker_title">Fingerprint icon</string>
    <string name="fod_icon_picker_summary">Choose your favorite fingerprint icon</string>
    <string name="fod_recog_animation_effect_title">Select fingerprint animation effect</string>
    <string name="data_disabled_icon_title">Show data disabled icon</string>
    <string name="data_disabled_icon_summary">Display the cross sign next to signal bar when data is disabled</string>
    <string name="status_bar_notif_count_title">Show notification count</string>
    <string name="status_bar_notif_count_summary">Display the number of pending notifications</string>
    <string name="notification_sound_vib_screen_on_title">Notification sound if active</string>
    <string name="notification_sound_vib_screen_on_summary">Play sound and vibration for notifications when screen is on</string>
    <string name="ticker_screen_title">Ticker</string>
    <string name="ticker_screen_summary">Ticker-style status bar notifications</string>
    <string name="notification_alpha_title">Notification background opacity</string>
</resources>