<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2017-2019 The Dirty Unicorns Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
            android:title="@string/icon_manager_title" >

    <Preference
       android:title="@string/statusbar_items_title"
       android:summary="@string/statusbar_items_summary" >
    <intent android:action="android.intent.action.MAIN"
        android:targetPackage="com.android.systemui"
        android:targetClass="com.android.systemui.tuner.TunerActivity" />
    </Preference>

    <SwitchPreference
        android:key="status_bar_logo"
        android:title="@string/nusantara_logo_title"
        android:summary="@string/nusantara_logo_summary"
        android:defaultValue="false" />

    <ListPreference
        android:key="status_bar_logo_style"
        android:entries="@array/status_bar_logo_style_entries"
        android:entryValues="@array/status_bar_logo_style_values"
        android:summary="%s"
        android:dependency="status_bar_logo"
        android:title="@string/status_bar_logo_style_title" />

    <PreferenceCategory
        android:key="signal_icon_category"
        android:title="@string/signal_icon_title">

       <com.nusantara.support.preferences.SystemSettingSwitchPreference
            android:key="show_fourg"
            android:title="@string/show_fourg_icon_title"
            android:summary="@string/show_fourg_icon_summary"
            android:defaultValue="false"/>

       <com.nusantara.support.preferences.SystemSettingSwitchPreference
            android:key="data_disabled_icon"
            android:title="@string/data_disabled_icon_title"
            android:summary="@string/data_disabled_icon_summary"
            android:defaultValue="true"/>

        <SwitchPreference
            android:key="use_old_mobiletype"
            android:title="@string/use_old_mobiletype_title"
            android:summary="@string/use_old_mobiletype_summary" />

       <com.nusantara.support.preferences.SystemSettingSwitchPreference
            android:key="show_volte_icon"
            android:title="@string/volte_icon_title"
            android:summary="@string/volte_icon_summary"
            android:defaultValue="true"/>

       <com.nusantara.support.preferences.SystemSettingListPreference
            android:key="volte_icon_style"
            android:title="@string/volte_icon_style_title"
            android:entries="@array/volte_icon_type_entries"
            android:entryValues="@array/volte_icon_type_values"
            android:dependency="show_volte_icon"
            android:summary="%s"
            android:defaultValue="0"/>
    </PreferenceCategory>
</PreferenceScreen>
