<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2017-2019 The Dirty Unicorns Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
            android:title="@string/notifications_title" >

    <com.nusantara.support.preferences.GlobalSettingMasterSwitchPreference
        android:key="heads_up_notifications_enabled"
        android:fragment="com.nusantara.wings.fragments.system.HeadsUpOptions"
        android:title="@string/heads_up_notifications"
        android:summary="@string/heads_up_notifications_summary"
        android:defaultValue="true" />

    <com.nusantara.support.preferences.SystemSettingMasterSwitchPreference
        android:key="pulse_ambient_light"
        android:fragment="com.nusantara.wings.fragments.system.EdgeLight"
        android:title="@string/pulse_ambient_light_title"
        android:summary="@string/pulse_ambient_light_summary"
        android:defaultValue="false" />

    <com.nusantara.support.preferences.SystemSettingMasterSwitchPreference
        android:key="status_bar_show_ticker"
        android:fragment="com.nusantara.wings.fragments.system.Ticker"
        android:title="@string/ticker_screen_title"
        android:summary="@string/ticker_screen_summary"
        android:defaultValue="false" />

    <com.nusantara.support.preferences.SystemSettingSwitchPreference
        android:key="less_boring_heads_up"
        android:title="@string/less_boring_heads_up_title"
        android:summary="@string/less_boring_heads_up_summary"
        android:defaultValue="false" />

    <com.nusantara.support.preferences.SystemSettingSwitchPreference
        android:key="ios_clipboard_enabled"
        android:title="@string/ios_clipboard_title"
        android:defaultValue="false" />

    <com.nusantara.support.preferences.SystemSettingSwitchPreference
        android:key="notification_sound_vib_screen_on" 
        android:title="@string/notification_sound_vib_screen_on_title" 
        android:summary="@string/notification_sound_vib_screen_on_summary"
        android:defaultValue="true" />

    <com.nusantara.support.preferences.SystemSettingSwitchPreference
        android:key="status_bar_notif_count"
        android:title="@string/status_bar_notif_count_title"
        android:summary="@string/status_bar_notif_count_summary"
        android:defaultValue="false" />

    <com.nusantara.support.preferences.SystemSettingSeekBarPreference
        android:key="notification_bg_alpha"
        android:title="@string/notification_alpha_title"
        android:defaultValue="255"
        android:max="255"
        settings:min="0"
        settings:units="" />

    <PreferenceCategory
        android:key="media_category"
        android:title="@string/media_category" >

        <com.nusantara.support.preferences.SystemSettingSwitchPreference
            android:key="artwork_media_background"
            android:title="@string/artwork_media_background_title"
            android:summary="@string/artwork_media_background_summary"
            android:defaultValue="true" />

        <com.nusantara.support.preferences.SystemSettingSeekBarPreference
            android:key="artwork_media_fade_level"
            android:title="@string/artwork_media_fade_level_title"
            android:summary="@string/artwork_media_fade_level_summary"
            android:dependency="artwork_media_background"
            android:max="100"
            settings:min="0"
            settings:units="%"
            settings:interval="5"
            android:defaultValue="30" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="notif_header_cat"
        android:title="@string/notification_headers_title" >

        <com.nusantara.support.preferences.SystemSettingSwitchPreference
            android:key="notification_headers"
            android:title="@string/notification_headers_title"
            android:summary="@string/notification_headers_summary"
            android:defaultValue="true" />

        <com.nusantara.support.preferences.SystemSettingSwitchPreference
            android:key="center_notification_headers"
            android:title="@string/center_notification_headers_title"
            android:summary="@string/center_notification_headers_summary"
            android:defaultValue="false" />
    </PreferenceCategory>
</PreferenceScreen>
