<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2017-2019 The Dirty Unicorns Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <com.nusantara.wings.preferences.CategoryPreference
        android:key="buttons_category"
        android:icon="@drawable/dt_buttons_bg"
        android:title="@string/buttons_title"
        android:summary="@string/buttons_summary"
        android:fragment="com.nusantara.wings.fragments.hardware.Buttons" />

    <com.nusantara.wings.preferences.CategoryPreference
        android:key="navigation_category"
        android:icon="@drawable/dt_navigationbar_bg"
        android:title="@string/navigation_options_title"
        android:summary="@string/navigation_options_summary"
        android:fragment="com.nusantara.wings.fragments.hardware.NavigationOptions" />

    <com.nusantara.wings.preferences.CategoryPreference
        android:key="powermenu_category"
        android:icon="@drawable/dt_powermenu_bg"
        android:title="@string/powermenu_title"
        android:summary="@string/powermenu_summary"
        android:fragment="com.nusantara.wings.fragments.hardware.PowerMenu" />
</PreferenceScreen>
